# swoop-db

./: .env  .pre-commit-config.yaml  .snyk  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  RELEASE.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/: publish-image.yml
.github/workflows/: publish-image.yml  python-publish.yml  python-test.yml  snyk-scan.yml
src/swoop/db/: __init__.py  __main__.py  cli.py  schema.sql
src/swoop/db/fixtures/: base_01.sql
src/swoop/db/migrations/: 00000_base_schema.up.sql  00001_base_schema.down.sql  00001_base_schema.up.sql  00001_cache.down.sql  00001_cache.up.sql  00001_version.down.sql  00001_version.up.sql  00002_cache_func.down.sql  00002_cache_func.up.sql  00003_remove_items.down.sql  00003_remove_items.up.sql  00003_thread_table_schema_change.down.sql  00003_thread_table_schema_change.up.sql  00003_workflow_constraint.up.sql  00004_update_thread.down.sql  00004_update_thread.up.sql  00005_handler_type.down.sql  00005_handler_type.up.sql  00006_workflow_constraint.down.sql  00006_workflow_constraint.up.sql  00007_change-uuid-formats.up.sql  00008_new_base.up.sql
tests/: conftest.py  test_cli.py  test_database.py  test_migrations.py
tests/fixtures/migrations/: 1_result.sql  2_base_01.sql  2_result.sql  6_base_01.sql  6_result.sql  7_result.sql  README.md
tests/pgtap/: test_action.sql  test_find_cached_action_for_payload.sql  test_item_inserts.sql  test_limit-locking.sql  test_process_payload.sql  test_uuid_v7.sql
